# fastjob

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  RELEASE.md  pyproject.toml  release.py  run_tests.py
deployment/: Dockerfile.dashboard  Dockerfile.worker  README.md  docker-compose.yml  fastjob-dashboard.service  fastjob-worker.service  kubernetes.yaml  supervisor.conf
docs/: cli-reference.md  instance-api.md  integrations.md  migration.md  production.md
examples/: README.md  automatic_plugin_loading_demo.py  basic_example.py  comprehensive_example.py  enhanced_features_example.py  fastapi_integration.py  idempotency_guide.py  instance_api_example.py  microservices_example.py
examples/jobs_directory_example/: README.md  app.py
examples/jobs_directory_example/jobs/: __init__.py  email.py  images.py  reports.py
examples/production/: README.md  monitor_and_restart.sh  worker_monitoring.md
fastjob/: __init__.py  client.py  config.py  errors.py  health.py  helpers.py  local.py  settings.py  testing.py
fastjob/cli/: colors.py  main.py  registry.py
fastjob/cli/commands/: __init__.py  core.py  health.py  jobs.py  migrate.py  queues.py  worker.py
fastjob/core/: discovery.py  heartbeat.py  processor.py  queue.py  registry.py
fastjob/db/: connection.py  context.py  helpers.py  migration_runner.py  migrations.py  schema.sql
fastjob/db/migrations/: 001_initial_schema.sql  002_worker_heartbeat.sql
fastjob/plugins/: __init__.py
fastjob/utils/: __init__.py  hashing.py  signals.py
jobs/: __init__.py  my_tasks.py
tests/: README.md  conftest.py  db_utils.py  test_connection_context.py  test_enhanced_config.py  test_job_introspection.py  test_listen_notify.py  test_production_scenarios.py  test_scheduling.py
tests/integration/: __init__.py  test_cli_integration.py  test_cli_queue_behavior.py  test_complete_cli_plugin_integration.py  test_connection_context.py  test_core.py  test_corrupted_data_handling.py  test_database_url_integration.py  test_edge_cases.py  test_embedded_worker.py  test_error_handling_edge_cases.py  test_job_introspection.py  test_listen_notify.py  test_production_scenarios.py  test_queue_processing_behavior.py  test_scheduling.py  test_specification_compliance.py  test_ttl_functionality.py  test_worker_heartbeat.py
tests/integration/global_api/: __init__.py  conftest.py  test_corrupted_data_handling.py  test_edge_cases.py  test_embedded_worker.py  test_error_handling_edge_cases.py  test_job_introspection.py  test_production_scenarios.py  test_scheduling.py  test_specification_compliance.py  test_ttl_functionality.py
tests/integration/infrastructure/: __init__.py  conftest.py  test_cli_integration.py  test_cli_queue_behavior.py  test_complete_cli_plugin_integration.py  test_connection_context.py  test_graceful_shutdown.py  test_listen_notify.py  test_queue_processing_behavior.py  test_signal_handling.py
tests/integration/instance_api/: __init__.py  conftest.py  test_core.py  test_worker_heartbeat.py  test_worker_heartbeat_comprehensive.py
tests/unit/: __init__.py  test_cli_plugin_system.py  test_configuration.py  test_enhanced_config.py  test_errors.py  test_global_api.py  test_hashing.py  test_health.py  test_plugin_loading_control.py  test_signal_handling.py
