[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastjob"
version = "0.1.0"
description = "FastJob - PostgreSQL-only async job queue - built for developer happiness."
authors = [{ name = "Abhinav Saxena", email = "abhinav@apiclabs.com" }]
readme = "README.md"
license = "MIT"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: System :: Distributed Computing",
]
keywords = [
  "async",
  "job",
  "queue",
  "postgresql",
  "task",
  "redis-alternative",
  "developer-experience",
  "zero-dependencies",
  "background-jobs",
]
dependencies = [
  "asyncpg>=0.30.0,<0.32.0",
  "pydantic>=2.7.1,<3.0.0",
  "pydantic-settings>=2.0.0,<3.0.0", # For configuration management
  "setuptools",                      # For plugin discovery via entry points
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "pytest-asyncio>=0.21.0",
  "black>=23.0.0",
  "flake8>=6.0.0",
  "isort>=5.12.0",
]

[project.scripts]
fastjob = "fastjob.cli.main:main"

[tool.setuptools.packages.find]
include = ["fastjob*"]
exclude = ["tests*", "jobs*", "deployment*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.black]
# Standard Black configuration
line-length = 88
target-version = ['py310', 'py311', 'py312', 'py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
# Make isort compatible with Black
profile = "black"
multi_line_output = 3
line_length = 88
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
